2002-01-22  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/NSWorkspace.m: Many tidyups and little fixes, major change
	to -getBestApp... so that it picks the best available app rather
	than just the one specifed by the user as 'best'.  This means you can
	always use it to get an app even if the user has set no preference.
	Fixed uninitialised variable in first version of this mod and made
	user preferences override declared types opened by apps.

2002-01-21  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (-deactivate): Don't hide modal windows.
	(-runModalSession:): Handle WM events (like resize) for any window
	right away.

2002-01-21  Richard Frith-Macdonald  <rfm@gnu.org>

	* Headers/Appkit/NSGraphicsContext.h: new method to slide image
	across screen between windows.
	* Source/NSGraphicsContext.m: dummy implementation
	* Source/NSWorkspace.m: Use new method.

Mon Jan 21 11:47:27 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSMenuItem.m ([-setSubmenu:]): When raising an exception
	that the submenu already has a supermenu, print titles of both
	submenu and supermenu.  
	* Source/NSMenuItem.m: For the whole class: access variable
	_title.

2002-01-20  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/NSWindow.m: ([-sendEvent:]) check to see that an old drag
	view is still in the current window before sending a dragging message
	to it ... if it has been removed, don't send the message.

2002-01-20  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/NSWindow.m: ([-sendEvent:]) use ASSIGN() and DESTROY() to
	update _lastDragView so we don't run into problems if something
	deallocates it.  Added some debug logging.  Fixed bug in logic of
	drag entry/update.  Restructured a little to improve readability.

Thu Jan 17 18:16:08 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextView.m ([-_blink:]): Fixed declaration - should take
	a single NSTimer * argument.

Thu Jan 17 00:03:46 2002  Nicola Pero  <n.pero@mi.flashnet.it>
